# dkml-workflows-regular-example

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  dune-project  your_example.opam  your_example.opam.template
.github/workflows/: build.yml  static.yml
ci/: build-test.sh  prepare-release.sh
ci/setup-dkml/gh-darwin/: action.yml  dune
ci/setup-dkml/gh-darwin/post/: action.yml
ci/setup-dkml/gh-darwin/pre/: action.yml
ci/setup-dkml/gh-linux/: action.yml  dune
ci/setup-dkml/gh-linux/post/: action.yml
ci/setup-dkml/gh-linux/pre/: action.yml
ci/setup-dkml/gh-windows/: action.yml  dune
ci/setup-dkml/gh-windows/post/: action.yml
ci/setup-dkml/gh-windows/pre/: action.yml
ci/setup-dkml/gl/: dune  setup-dkml.gitlab-ci.yml
ci/setup-dkml/pc/: dune  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
lib/: dune
test/: dune  your_example.ml
